Add intial styling

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>Famous Blunders | Trijam #261</title>
+        <link href="styles/style.css" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <a href="https://www.github.com/thecodingcouple/trijam-261">Famous Blunders | Trijam #261</a>
+        </header>
+        <main>
+            <img src="assets/black-bishop.png">
+        </main>
+        <footer>
+            <a href="https://twitter.com/thecodingcouple">A game by Michael &amp; Ashley | @thecodingcouple</a>
+        </footer>
+        <script type="module" src="scripts/main.js"></script>
+    </body>
+</html>
