--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <h1 class="big-heading">Famous Blunders</h1>
                     <div class="game-description">
                         <img class="title-image" src="assets/black-queen.png" alt="A hand drawn Black King Chess piece">
-                        <p>In <strong>Famous Blunders</strong> you are replaying the final moments before a chess player blundered a game piece. The objective of the game is to identify which piece was blundered and where did the player blundering the move placed it.</p>
+                        <p>In <strong>Famous Blunders</strong> you are replaying the final moments before a chess player blundered a game piece. The objective of the game is to identify which piece was blundered and where it was moved to.</p>
                     </div>
-                    <button class="state-game-button">Start Game</button>
+                    <button id="start-game-button" class="state-game-button">Start Game</button>
                 </div>
             </section>
             <!-- Play Scene -->
@@ -31,8 +31,15 @@
                 <div class="scene">
                     <h2 id="players-heading"></h2>
                     <h3 id="event-heading"></h3>
-                    <table id="game-board"></table>
-                    <button id="hint-button" title="Reveal Hint">Reveal Hint</button>
+                    <div class="game-area">
+                        <p>It is <span id='player-to-move'></span>'s turn to move <strong>(<span id="player-color"></span>)</strong>. To select the blunder:
+                            <ol>
+                                <li>Click on the square of game piece to move.</li>
+                                <li>Click on a second square to highlight it's destination.</li>
+                            </ol>
+                        <table id="game-board"></table>
+                        <button id="hint-button" title="Reveal Hint">Reveal Hint</button>
+                    </div>
                 </div>
             </section>
             <!-- End Game Scene -->
